Migrate "old" (but not oldest 😅) scss to roughly stylelint compliant
Disabled the bare minimum rules without having to dig deep to keep it roughly consistent with the old scss_lint. Main difference is not aligning property vars. Can't find a plugin for stylelint to do this; so abandoning it.

--- a/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/_font-awesome-glyphs.scss.erb
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/_font-awesome-glyphs.scss.erb
@@ -94,7 +94,7 @@ $fa-font-icons: (
   }
 
   @if $progress-spinner == true {
-    &.in-progress:before {
+    &.in-progress::before {
       @include in-progress-spinner;
     }
   }
@@ -107,7 +107,7 @@ $fa-font-icons: (
   }
 
   @if $progress-spinner == true {
-    &.in-progress:after {
+    &.in-progress::after {
       @include in-progress-spinner;
     }
   }
