--- a/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/_keyframes.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/_keyframes.scss
@@ -23,7 +23,7 @@
   }
 }
 
-@keyframes fadeIn {
+@keyframes fade-in {
   from {
     opacity: 0;
   }
@@ -33,7 +33,7 @@
   }
 }
 
-@keyframes fadeOut {
+@keyframes fade-out {
   from {
     opacity: 1;
   }
