--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/new-theme.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/new-theme.scss
@@ -2815,7 +2815,7 @@ button.edit-environment {
   margin:     10px 0 0 5px;
 
   &:before {
-    color:     $icon--secondary-color;
+    color:     $icon-secondary-color;
     font-size: 16px;
     margin:    0 5px;
   }
